--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -11,7 +11,7 @@
     <meta name=creator content="Mislav Marohnić">
     {% if page.description %}<meta name=description content="{{ page.description | escape }}">{% endif %}
     <link rel="stylesheet" type="text/css" href="{% if page.stylesheet %}{{ page.stylesheet }}{% else %}../guide.css{% endif %}">
-    <link rel="icon" type="image/png" href="../images/favicon.png">
+    <link rel="icon" type="image/png" href="http://codecly259.github.io/poignant-guide-cn/images/favicon.png">
 </head>
 <body class="{{ page.type }}">
 
